[package]
name = "yitizi"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "CC0-1.0"
description = "異體字查詢 Get variant Chinese characters"
keywords = ["chinese", "chinese-character", "natural-language-processing"]
categories = ["text-processing", "command-line-utilities"]
repository = "https://github.com/edward-martyr/yitizi-rs"
build = "build.rs"

[dependencies]
serde_json = "1.0.117"

[build-dependencies]
build_lib = { path = "build_lib" }
serde_json = "1.0.117"

[profile.release.build-override]
opt-level = 3

[profile.dev.build-override]
opt-level = 3
