[package]
name = "yitizi"
version = "0.1.0"
edition = "2021"
readme = "../README.md"
license = "CC0-1.0"
description = "異體字查詢 Get variant Chinese characters"
keywords = ["Chinese", "Chinese-Character", "Sinograph", "Yitizi", "NLP"]
categories = ["text-processing", "command-line-utilities"]
repository = "https://github.com/edward-martyr/yitizi-rs"
include = ["src/**/*", "Cargo.toml"]

[dependencies]
serde_json = "1.0.117"
